@@ -28,6 +28,8 @@ Internal features:
    hook) in the name rather than the current execution context.
  - Added in-memory binary model exchange for LTFB.
  - Added support for ROCm and MIOpen
+ - Updated the bamboo test environment to use local executable rather
+   than hard coded executables
 
 I/O & data readers:
  - Experimental data reader that generates graph random walks with
